# eye-tracking-demo

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: db.py  deps.py  main.py  models.py
app/routers/: sessions.py
app/routes/: sessions.py
fe/: package-lock.json  package.json
fe/src/lib/: types.ts
fe/src/lib/components/: TimeSeriesChart.svelte  TrackingCanvas.svelte
fe/src/routes/: +page.svelte
fe/src/routes/sessions/: +page.svelte
fe/src/routes/sessions/[id]/: +page.svelte
fe/src/routes/sessions/new/: +page.svelte
fe/src/types/: webgazer.d.ts
migrations/: env.py
migrations/versions/: a71407548d8e_create_session_and_sample_tables.py
