[project]
name = "aeon-eye-tracking"
version = "0.1.0"
description = "Eye tracking application with WebGazer.js and FastAPI backend"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
dependencies = [
    "alembic>=1.16.4",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.112.1",
    "sqlmodel>=0.0.24",
]
requires-python = ">=3.12"
readme = "README.md"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
